week show page and carousel arrows

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,3 +1,17 @@
+.metrouicss .page-header {
+  width: 1260px !important;
+  margin: auto !important;
+}
+
+.metrouicss .page-region {
+  width: 1260px !important;
+  margin: auto !important;
+}
+
+.metrouicss .carousel .control {
+  top: 10% !important;
+}
+
 .metrouicss .app-bar {
   min-height: 20px !important;
 }
@@ -8,7 +22,7 @@
 
 .metrouicss .listview {
   margin-top: 3px;
-  margin-left: 12px !important;
+  margin-left: 5px !important;
 }
 
 
