--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,7 +1,7 @@
 <div class="nav-bar bg-color-darken">
 
                         <div class="nav-bar-inner">
-                            <%= link_to "Tract It!", root_path, class: "element brand" %>
+                            <%= link_to "Track It!", root_path, class: "element brand" %>
 
                             <span class="divider"></span>
                             <ul class="menu">
