--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -53,6 +53,7 @@
 
 <% if @user.weeks.count > 0 %>
 <div class="carousel" style="height: 800px;" data-role="carousel"  data-param-direction="right" data-param-period="9999999999999" data-param-markers="on" >
+
 	<div class="slides">
 		<% @user.weeks.each do |week| %>
 		<div class="slide image" >
@@ -60,14 +61,15 @@
 					<ul class="listview fluid">
 					<li class="bg-color-pinkDark fg-color-white">
                         <div class="data">
-							<%= week.name  %>
-							<%= week.status  %>
+						<%= link_to week.name, week%>
+							
+							
                         </div>
 					</li>
 					<li class="bg-color-pinkDark fg-color-white">
                         <div class="data">
                                                
-					       
+					       <%= week.status  %>
                         </div>
 					</li>
 					<li class="bg-color-pinkDark fg-color-white">
@@ -84,10 +86,13 @@
  
 
                                         </ul>
+				<!--
 					<div class="notices">
-						<div id="Summary<%=userweek.id%>", class="bg-color-blue fg-color-white" style="height: 25px; text-align: center;"><%= userweek.summary %></div>
+						<div id="Summary<%=userweek.id%>", class="fg-color-blue" style="height: 25px; text-align: center;"><%= userweek.summary %></div>
 					</div>
-						
+				-->
+				<div ><h1 id="Summary<%=userweek.id%>" style="font-size: 46px; text-align: center;"><%= userweek.summary %></h1></div>
+				
 				<%= form_for(userweek, url: {userweekId: userweek.id, userId: @user.id, controller: "userweeks", action: "updateSummary" }, remote: true) do |f| %>
 													
 													
@@ -98,7 +103,7 @@
 				
 <!-- =========================================Jiras=================================================== -->
 						<div class="notices">
-						<div id="Summary<%=userweek.id%>", class="bg-color-blue fg-color-white" style="height: 25px; text-align: center;">Jiras opened</div>
+						<div id="Summary<%=userweek.id%>", class="bg-color-blueLight" style="height: 25px;"><i class="icon-box"></i>&nbspJiras opened</div>
 					</div>			
 				
 				<div id="listOfJiras">
@@ -128,7 +133,7 @@
 <!-- =====================================Accomplishments============================================= -->				
 
 						<div class="notices">
-						<div id="Summary<%=userweek.id%>", class="bg-color-blue fg-color-white" style="height: 25px; text-align: center;">Major Accomplishments</div>
+						<div id="Summary<%=userweek.id%>", class="bg-color-blueLight" style="height: 25px;"><i class="icon-box"></i>&nbspMajor Accomplishments</div>
 					</div>			
 				
 				
@@ -160,7 +165,7 @@
 <!-- ===========================================Riskitems============================================= -->				
 
 						<div class="notices">
-						<div id="Summary<%=userweek.id%>", class="bg-color-blue fg-color-white" style="height: 25px; text-align: center;">Risk items / Blockers</div>
+						<div id="Summary<%=userweek.id%>", class="bg-color-blueLight" style="height: 25px;"><i class="icon-box"></i>&nbspRisk items / Blockers</div>
 					</div>			
 				
 				
@@ -192,7 +197,7 @@
 <!-- ===========================================Plan for next week==================================== -->				
 
 						<div class="notices">
-						<div id="Summary<%=userweek.id%>", class="bg-color-blue fg-color-white" style="height: 25px; text-align: center;">Plan for next week</div>
+						<div id="Summary<%=userweek.id%>", class="bg-color-blueLight" style="height: 25px;"><i class="icon-box"></i>&nbspPlan for next week</div>
 					</div>			
 				
 				
@@ -226,8 +231,12 @@
 		<%end%>
 
 	</div>
+<span class="control left"><i class="icon-arrow-left-3" style="font-size: 56px;"></i></span>
+<span class="control right"><i class="icon-arrow-right-3" style="font-size: 56px;"></i></span> 
+<!--
 	<span class="control left">&#8249;</span>
 	<span class="control right">&#8250;</span>
+-->
 </div>
 
 <% else %>
