--- a/app/views/weeks/show.html.erb
+++ b/app/views/weeks/show.html.erb
@@ -6,35 +6,151 @@
 	<% end %>
 </li>
 <% end %>
-<div class="row">
-      <h1>
-        <%= @week.name %>
-      </h1>
 
-        <%= @week.status %>
-      <%= @week.startDate  %>
-      <%= @week.endDate  %>
-
+<div>
+					
+    <ul class="listview fluid">
+					  <li class="bg-color-pinkDark fg-color-white">
+                                            <div class="icon">
+                                             <i class="icon-drawer icon-small"></i>
+                                            </div>
+                                            <div class="data">
+                                               <%= @week.name  %>
+                                            </div>
+                                          </li>
+					  <li class="bg-color-pinkDark fg-color-white">
+                                            <div class="icon">
+                                             <i class="icon-drawer icon-small "></i>
+                                            </div>
+                                            <div class="data">
+                                             <h4>Status</h4>
+                                              <%= @week.status %> from <%= @week.startDate  %> to <%= @week.endDate  %> 
+                                            </div>
+                                          </li>
+					  <li class="bg-color-pinkDark fg-color-white">
+                                            <div class="icon">
+                                             <i class="icon-drawer icon-small"></i>
+                                            </div>
+                                            <div>PL QA link</div>
+                                          </li>
+						<li class="bg-color-pinkDark fg-color-white">
+                                            <div class="icon">
+                                             <i class="icon-drawer icon-small"></i>
+                                            </div>
+                                            <div>PL QA link</div>
+                                          </li>
+	</ul>
 </div>
+
 <% if @week.users.count > 0 %>
-<div class="carousel" style="height: 500px;" data-role="carousel"  data-param-direction="left" data-param-period="9999999999999" data-param-markers="on" >
-                                <div class="slides">
-<% @week.users.each do |user| %>
-                                    <div class="slide image" >
-    <div class="tile bg-color-orange"></div>
-  <%= link_to user.name, user  %>
-  <%= user.email  %>
- <p>Summary</p> <%= user.userweeks.find_by_week_id(@week.id).summary  %>
- <p>Jiras</p> <%= user.userweeks.find_by_week_id(@week.id).jiras  %>
-                                    </div>
+<div class="carousel" style="height: 800px;" data-role="carousel"  data-param-direction="left" data-param-period="9999999999999" data-param-markers="on" >
 
-<%end%>
+	<div class="slides">
+		<% @week.users.each do |user| %>
 
-                                </div>
-                                <span class="control left">&#8249;</span>
-                                <span class="control right">&#8250;</span>
+			<div class="slide image" >
+			
+			
+				<ul class="listview fluid">
+					<li class="bg-color-pinkDark fg-color-white">
+						
+                        <div class="data">
+							<%= link_to user.name, user, html_options = { style: "color: #ffffff;"} %>
+						
+						</div>
+					</li>
+					<li class="bg-color-pinkDark fg-color-white">
+                        <div class="data">
+                             <%= user.email  %>                  
+					       
                         </div>
+					</li>
+					<li class="bg-color-pinkDark fg-color-white">
+                                            <div class="data">
+                                               
+												 <% userweek =  @week.userweeks.where(user_id: user.id).first %> 
+												 Userweekid#<%= userweek.id %>
+												 
+												 
+												 
+                                            </div>
+                                          </li>                 
 
+ 
+
+                </ul>
+
+	<!-- 	<div class="notices">
+						<div id="Summary<%=userweek.id%>", class=" fg-color-blue" style="height: 25px; text-align: center; font-size: 56px;">Updates</div>
+						
+		</div>  -->
+		<div><h1 style="font-size: 46px; text-align: center;"><%= userweek.summary %></h1></div>
+ 
+ <div class="grid">
+ <div class="row">
+
+	<div class="span4">
+		<table class="bordered">
+			<th>Jiras</th> 
+			<% userweek.jiras.each do |jira| %>
+			<tr>
+				<td><%= jira.jiranumber %></td>
+			</tr>
+			<% end %>
+		</table>
+	</div>
+	<div class="span4">
+		<table class="bordered">
+			<th>Major accomplishments</th> 
+			<% userweek.accomplishments.each do |accomplishment| %>
+			<tr>
+				<td><%= accomplishment.title %></td>
+			</tr>
+			<% end %>
+		</table>
+	</div>
+	
+	<div class="span4 ">
+		<table class="bordered">
+			<th>Risk items</th> 
+			<% userweek.riskitems.each do |riskitem| %>
+			<tr>
+				<td><%= riskitem.title %></td>
+			</tr>
+			<% end %>
+		</table>
+	</div>
+	
+	<div class="span4">
+		<table class="bordered">
+			<th>Plan for next week</th> 
+			<% userweek.nextplans.each do |nextplan| %>
+			<tr>
+				<td><%= nextplan.title %></td>
+			</tr>
+			<% end %>
+		</table>
+	</div>
+	
+	
+		
+</div>
+</div>
+
+
+
+<!-- ===slide end=== -->
+                                    
+                                   
+			</div>
+
+		<%end%>
+
+	</div>
+<span class="control left"><i class="icon-arrow-left-3" style="font-size: 56px;"></i></span>
+<span class="control right"><i class="icon-arrow-right-3" style="font-size: 56px;"></i></span>                               
+<!-- <span class="control right">&#8250;</span>      -->                         
+</div>
 <% else %> 
 <div><h3>This week does not have any users. Really?? </h3> </div>
 <% end %>
