--- a/app/views/jiras/create.js.erb
+++ b/app/views/jiras/create.js.erb
@@ -1,9 +1,9 @@
-//$("#Summary<%=@userweekfound.id%>").text("<%=@userweekfound.summary%>")
-$('#jiraTextbox').val("");
+
+$('#jiraTextbox<%=@userweekfound.id.to_s%>').val("");
 //$('#listOfJiras').append('<a  class="button default" target="_blank" href="http://jira/browse/<%= @jira.jiranumber %>" ><%= @jira.jiranumber %></a>')
 
 
-$('#listOfJiras').append('<div class="button-set" data-role="button-set" style="display: inline-block;"><%= link_to @jira.jiranumber, "http://jira/browse/"+@jira.jiranumber, target: "_blank", class: "button default"%><%= link_to @jira, url: {userId: @user.id, controller: "jiras" }, class: "tool-button", id: "deleteButtonId"+@jira.jiranumber, remote: true, method: :delete do %><i class="icon-cancel-2 icon-small"></i><% end %></div>')
+$('#listOfJiras<%=@userweekfound.id.to_s%>').append('<div class="button-set" data-role="button-set" style="display: inline-block;"><%= link_to @jira.jiranumber, "http://jira/browse/"+@jira.jiranumber, target: "_blank", class: "button default"%><%= link_to @jira, url: {userId: @user.id, controller: "jiras" }, class: "tool-button", id: "deleteButtonId"+@jira.jiranumber, remote: true, method: :delete do %><i class="icon-cancel-2 icon-small"></i><% end %></div>')
 
 
 
