--- a/app/views/riskitems/create.js.erb
+++ b/app/views/riskitems/create.js.erb
@@ -1,9 +1,9 @@
 
-$('#riskitemTextBox').val("");
+$('#riskitemTextBox<%=@userweekfound.id.to_s%>').val("");
 
 
 
-$('#listOfRiskitems').append('<div class="button-set" data-role="button-set" style="display: inline-block;"><%= link_to @riskitem.title, "#", class: "button default bg-color-red"%><%= link_to @riskitem, url: {userId: @user.id, controller: "riskitems" }, class: "tool-button", id:  "deleteRiskitemId"+@riskitem.id.to_s, remote: true, method: :delete do %><i class="icon-cancel-2 icon-small"></i><% end %></div>')
+$('#listOfRiskitems<%=@userweekfound.id.to_s%>').append('<div class="button-set" data-role="button-set" style="display: inline-block;"><%= link_to @riskitem.title, "#", class: "button default bg-color-red"%><%= link_to @riskitem, url: {userId: @user.id, controller: "riskitems" }, class: "tool-button", id:  "deleteRiskitemId"+@riskitem.id.to_s, remote: true, method: :delete do %><i class="icon-cancel-2 icon-small"></i><% end %></div>')
 
 
 
