--- a/app/views/weeks/_weekhomepage.html.erb
+++ b/app/views/weeks/_weekhomepage.html.erb
@@ -21,7 +21,17 @@
 												 
 												 
                                             </div>
-                                          </li>                 
+                                          </li> 
+					<li class="bg-color-pinkDark fg-color-white">
+                                            <div class="data">
+                                               
+								Placeholder				 
+							
+												 
+												 
+												 
+                                            </div>
+                                          </li> 										  
 
  
 
