home page has description now

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -31,6 +31,36 @@
 							<h2>Weeks</h2>
 							</div>
 						</li>
+						</br>
+						
 						
 </ul>
+<ul class="listview fluid">
 
+<li class="bg-color-teal fg-color-white" style="width: auto;">
+
+						<p>The app is called Track-it!. </br>Track-it! records weekly updates for a team. </br>
+						- A team-member can login and update what he did during the last week. </br>
+						- The manager can go to current week's home page and see who has updated the status and who has not done yet. </br></br></br>
+						On the user or the week page, you can go left and right and explore and you will understand what exactly is happening </br>
+
+- On a week's page, you can go left and right to see what each user did during that week.
+</br>
+- On a user's page, you can go left and right to see what the user did in this week and previous weeks.
+</br></br>
+If you are a person who is updating the status, you need to check 'Update done?' checkbox on the right side where you are updating current week's task. and that would change your status on the week's home page.
+</br></br></br>
+You can login as vicky@gmail.com/foobar
+
+</br></br>
+There are a lot of things that still need to be done. This is just a POC. Pending stuff:
+</br>
+- Adding calendar/datepicker widget on the new week page</br>
+- etc.</br>
+- etc.</br>
+</br>
+If you like it or hate it, drop me an email at vicky17d@gmail.com
+</p>
+						</li>
+
+</ul>
